# waves

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  app.py  compose.yaml  docker-compose.yaml  example.mp3.yaml  example.yaml  pyproject.toml  requirements.txt
.github/workflows/: build-and-publish-images.yaml  build-and-publish-images.yml
dockerfiles/: audiowaveform.Dockerfile  webserver.Dockerfile
static/: custom.css  custom.js
templates/: index.html
waves/: blueprint.py  caching.py  config.py  models.py
