[tool.poetry]
name = "waves"
version = "0.1.0"
description = "Simple audio recordings hosting server"
authors = ["Luca Scotton <luca@lucascott.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
Flask = "^3.0.3"
waitress = "^3.0.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
