[project]
name = "waves"
version = "0.1.0"
description = "Simple audio recordings hosting server"
authors = [{ name = "Luca Scotton", email = "luca@lucascott.com" }]
requires-python = "~=3.13"
readme = "README.md"
dependencies = [
    "flask~=3.0",
    "waitress~=3.0",
    "prometheus-flask-exporter~=0.23",
]

[dependency-groups]
dev = ["ruff"]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
